--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "mysql": "^2.15.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   },
@@ -37,7 +38,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "mongoose": "^5.1.3",
     "nodemon": "^1.17.5",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.5"
