--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,5 @@
     "max-len": [1, 120, 2, {"ignoreComments": true}],
     "react/prop-types": [2]
   },
-  "extends": ["airbnb-base"]
+  "extends": ["airbnb"]
 }
