--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "server-dev": "nodemon server/index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "react": "^16.4.0",
