--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
