--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "mysql": "^2.15.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-slick": "^0.23.1",
-    "slick-carousel": "^1.8.1"
+    "react-star-ratings": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
