--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -40,8 +41,10 @@
     "eslint-plugin-react": "^7.8.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "nodemon": "^1.17.5",
+    "puppeteer": "^1.4.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.5"
   }
