--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
+    "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
