--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js",
+    "start": "node server/index.js",
     "test": "jest"
   },
   "dependencies": {
